// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeToRuntimeReadyProject > omits compiled projectConfig when no projectConfig blocks are present 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [],
  "compiledModules": {},
  "postProcessEffects": [],
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`serializeToRuntimeReadyProject > serializes runtime-ready project with compiled projectConfig 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [
    {
      "code": [
        "projectConfig",
        "memorySizeBytes 65536",
        "projectConfigEnd",
      ],
      "gridCoordinates": {
        "x": 0,
        "y": 0,
      },
    },
  ],
  "compiledConfig": {
    "binaryAssets": [],
    "memorySizeBytes": 65536,
  },
  "compiledModules": {
    "mod": {},
  },
  "postProcessEffects": [],
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;
